sdk/include/unirt.h


typedef const char* unirt_PluginId;
typedef const char* unirt_Path;
typedef bool (*unirt_token_callback)(const char* token, void* user_data);
UNIRT_API void unirt_free(void* ptr);
typedef struct {
    unirt_PluginId* plugin_ids;   
    int32_t          plugin_count; 
} unirt_GetPluginListOutput;
typedef struct {
    unirt_PluginId plugin_id; 
} unirt_GetDeviceListInput;
typedef struct {
    const char** device_ids;   
    const char** device_names; 
    int32_t      device_count; 
} unirt_GetDeviceListOutput;
typedef struct {
    unirt_PluginId plugin_id;   
    const char*     mode;        
    int32_t         ngl_default; 
} unirt_ResolveDeviceInput;
typedef struct {
    char*   device_id; 
    int32_t ngl;       
    char*   warning;   
} unirt_ResolveDeviceOutput;
typedef struct {
    int64_t ttft;        
    int64_t prompt_time; 
    int64_t decode_time; 
    int64_t prompt_tokens;    
    int64_t generated_tokens; 
    int64_t audio_duration;   
    double prefill_speed;    
    double decoding_speed;   
    double real_time_factor; 
    const char* stop_reason; 
} unirt_ProfileData;
typedef struct {
    float       temperature;        
    float       top_p;              
    int32_t     top_k;              
    float       min_p;              
    float       repetition_penalty; 
    float       presence_penalty;   
    float       frequency_penalty;  
    int32_t     seed;               
    unirt_Path grammar_path;       
    const char* grammar_string;     
    bool        enable_json;        
} unirt_SamplerConfig;
typedef struct {
    int32_t               max_tokens;     
    const char**          stop;           
    int32_t               stop_count;     
    int32_t               n_past;
    unirt_SamplerConfig* sampler_config; 
    unirt_Path* image_paths;      
    int32_t      image_count;      
    int32_t      image_max_length; 
    unirt_Path* audio_paths;      
    int32_t      audio_count;      
    bool    sliding_window;
    int32_t sliding_window_n_keep; 
} unirt_GenerationConfig;
typedef struct {
    int32_t n_ctx;            
    int32_t n_threads;        
    int32_t n_threads_batch;  
    int32_t n_batch;          
    int32_t n_ubatch;         
    int32_t n_seq_max;        
    int32_t n_gpu_layers;     
    unirt_Path chat_template_path;     
    const char* chat_template_content;  
    const char* grammar_str;            
} unirt_ModelConfig;
typedef struct {
    unirt_Path        model_path;     
    unirt_Path        tokenizer_path; 
    unirt_ModelConfig config;         
    unirt_PluginId    plugin_id;      
    const char*        device_id;      
} unirt_LlmCreateInput;
typedef struct {
    unirt_Path path; 
} unirt_KvCacheSaveInput;
typedef struct {
    void* reserved; 
} unirt_KvCacheSaveOutput;
typedef struct {
    unirt_Path path; 
} unirt_KvCacheLoadInput;
typedef struct {
    void* reserved; 
} unirt_KvCacheLoadOutput;
typedef struct {
    const char* role;    
    const char* content; 
} unirt_LlmChatMessage;
typedef struct {
    unirt_LlmChatMessage* messages;              
    int32_t                message_count;         
    const char*            tools;                 
    bool                   enable_thinking;       
    bool                   add_generation_prompt; 
} unirt_LlmApplyChatTemplateInput;
typedef struct {
    char* formatted_text; 
} unirt_LlmApplyChatTemplateOutput;
typedef struct {
    const char*                    prompt_utf8; 
    const unirt_GenerationConfig* config;      
    unirt_token_callback          on_token;    
    void*                          user_data;   
    const int32_t* input_ids;       
    int32_t        input_ids_count; 
} unirt_LlmGenerateInput;
typedef struct {
    char*              full_text;    
    unirt_ProfileData profile_data; 
} unirt_LlmGenerateOutput;
typedef struct {
    int32_t vocab_size; 
    int32_t bos_token;  
    int32_t add_bos;    
    int32_t reserved0;  
} unirt_LlmModelInfo;
typedef struct {
    int64_t model_bytes;       
    int64_t kv_cache_bytes;    
    int64_t device_peak_bytes; 
    int64_t process_rss_bytes; 
    const char* device_name;   
} unirt_LlmRuntimeStats;
typedef struct {
    const char* type;  
    const char* text;  
} unirt_VlmContent;
typedef struct {
    const char*        role;           
    unirt_VlmContent* contents;       
    int64_t            content_count;  
} unirt_VlmChatMessage;
typedef struct {
    unirt_Path        model_path;     
    unirt_Path        mmproj_path;    
    unirt_ModelConfig config;         
    unirt_PluginId    plugin_id;      
    const char*        device_id;      
    unirt_Path        tokenizer_path; 
} unirt_VlmCreateInput;
typedef struct {
    unirt_VlmChatMessage* messages;        
    int32_t                message_count;   
    const char*            tools;           
    bool                   enable_thinking; 
    bool grounding; 
} unirt_VlmApplyChatTemplateInput;
typedef struct {
    char* formatted_text; 
} unirt_VlmApplyChatTemplateOutput;
typedef struct {
    bool supports_vision; 
    bool supports_audio;  
} unirt_VlmCapabilities;
typedef struct {
    const char*                    prompt_utf8; 
    const unirt_GenerationConfig* config;      
    unirt_token_callback          on_token;    
    void*                          user_data;   
} unirt_VlmGenerateInput;
typedef struct {
    char*              full_text;    
    unirt_ProfileData profile_data; 
} unirt_VlmGenerateOutput;
typedef enum {
    UNIRT_EMBEDDING_POOLING_MODEL_DEFAULT = 0, 
    UNIRT_EMBEDDING_POOLING_CLS           = 1, 
    UNIRT_EMBEDDING_POOLING_MEAN          = 2, 
    UNIRT_EMBEDDING_POOLING_LAST_TOKEN    = 3  
} unirt_EmbeddingPooling;
typedef struct {
    unirt_Path              model_path;  
    unirt_PluginId          plugin_id;   
    const char*             device_id;   
    unirt_EmbeddingPooling pooling;     
    bool                    normalize;   
    const char*             output_name; 
} unirt_EmbeddingCreateInput;
typedef struct {
    const int64_t* input_ids;
    const int64_t* attention_mask;
    const int64_t* token_type_ids;
    int32_t        batch_size;
    int32_t        sequence_length;
} unirt_EmbeddingEncodeInput;
typedef struct {
    float*  embeddings;
    int32_t embedding_count;
    int32_t embedding_dimension;
} unirt_EmbeddingEncodeOutput;
typedef struct {
    int64_t     model_bytes;
    int64_t     device_peak_bytes;
    int64_t     process_rss_bytes;
    const char* device_name; 
} unirt_EmbeddingRuntimeStats;